// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegates Profile Detail Render and click Edit 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background-color: rgba(219, 241, 255, 0.46); position: relative; height: 143px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <a
          href="/account/dummy/settings/resources/delegates"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          delegate.delegates
        </a>
        <span>
          /
        </span>
        <a
          href="/account/dummy/settings/resources/delegates?tab=configurations"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          delegate.delegatesConfigurations
        </a>
        <span>
          /
        </span>
      </div>
      <p
        class="StyledProps--font StyledProps--main"
        style="font-size: 20px;"
      >
        Primary
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
      >
        The primary profile for the account
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
      data-test="editDelegateConfigurationButton"
      id="editDelegateConfigurationBtn"
      style="position: absolute; top: 50px; right: 50px;"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-floppy-disk StyledProps--main StyledProps--padding-right-xsmall"
        icon="floppy-disk"
      >
        <svg
          data-icon="floppy-disk"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            floppy-disk
          </desc>
          <path
            d="M15.71 2.29l-2-2A.997.997 0 0013 0h-1v6H4V0H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V3c0-.28-.11-.53-.29-.71zM14 15H2V9c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v6zM11 1H9v4h2V1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        save
      </span>
    </button>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100vh - 143px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="width: 600px;"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              overview
            </p>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegate.CONFIGURATION_NAME
              </p>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="Primary"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegates.delegateIdentifier
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                description
              </p>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="The primary profile for the account"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                tagsLabel
              </p>
              <div
                class="bp3-popover-wrapper TagInput--tagInput bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                    >
                      <div
                        class="bp3-tag-input-values"
                      >
                        <input
                          class="bp3-input-ghost bp3-multi-select-tag-input-input"
                          placeholder="delegate.enterTags"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              delegate.Scope
            </p>
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 100%;"
            >
              <h3
                class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-bottom-xxlarge"
                level="3"
              >
                delegates.newDelegateConfigWizard.scopeSubtitle
              </h3>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.nonprodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.prodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
          style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px; width: 550px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
            style="color: rgb(34, 39, 45);"
          >
            delegate.Init_Script
          </p>
          <textarea
            class="codeEditor"
            placeholder="delegate.initScriptPlaceholder"
          >
            test this
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Profile Detail initial render 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background-color: rgba(219, 241, 255, 0.46); position: relative; height: 143px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <a
          href="/account/dummy/settings/resources/delegates"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          delegate.delegates
        </a>
        <span>
          /
        </span>
        <a
          href="/account/dummy/settings/resources/delegates?tab=configurations"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          delegate.delegatesConfigurations
        </a>
        <span>
          /
        </span>
      </div>
      <p
        class="StyledProps--font StyledProps--main"
        style="font-size: 20px;"
      >
        Primary
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
      >
        The primary profile for the account
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
      data-test="editDelegateConfigurationButton"
      id="editDelegateConfigurationBtn"
      style="position: absolute; top: 50px; right: 50px;"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
        icon="edit"
      >
        <svg
          data-icon="edit"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            edit
          </desc>
          <path
            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        edit
      </span>
    </button>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100vh - 143px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="width: 600px;"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              overview
            </p>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegate.CONFIGURATION_NAME
              </p>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px; line-height: 24px; color: rgb(34, 39, 45); letter-spacing: -0.01px;"
              >
                Primary
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegates.delegateIdentifier
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                description
              </p>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px; line-height: 24px; color: rgb(34, 39, 45); letter-spacing: -0.01px;"
              >
                The primary profile for the account
              </p>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              delegate.Scope
            </p>
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 100%;"
            >
              <h3
                class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-bottom-xxlarge"
                level="3"
              >
                delegates.newDelegateConfigWizard.scopeSubtitle
              </h3>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.nonprodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.prodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
          style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px; width: 550px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
            style="color: rgb(34, 39, 45);"
          >
            delegate.Init_Script
          </p>
          <textarea
            class="codeEditor"
            disabled=""
          >
            test this
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;
